<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editor_expenditures"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackgroundApp"
    android:orientation="vertical"
    tools:context="ch.mse.mybudget.EditorExpendituresActivity">

    <LinearLayout
        android:id="@+id/container_editor_expenditure_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_editor_expenditures_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_editor_expenditures_amount"
            android:textColor="@color/colorTextEditorExpenditure"
            android:paddingBottom="8dp"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/et_editor_expenditures_amount"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                android:textColor="@color/colorTextEditorExpenditure"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_editor_expenditures_currency"
                android:textColor="@color/colorTextEditorExpenditure"
                android:layout_alignParentRight="true"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/tv_currency" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_editor_expenditure_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_editor_expenditures_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_editor_expenditures_date"
            android:textColor="@color/colorTextEditorExpenditure"
            android:paddingBottom="8dp"/>



        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <!-- TODO Change to DatePicker when time left-->
            <EditText
                android:id="@+id/et_editor_expenditures_date"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="date"
                android:layout_alignParentRight="true"
                android:hint="@string/hint_editor_expenditures_date"
                android:textColor="@color/colorTextEditorExpenditure"
                android:paddingBottom="8dp"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_editor_expenditure_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_editor_expenditures_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_editor_expenditures_place"
            android:textColor="@color/colorTextEditorExpenditure"
            android:paddingBottom="8dp"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/et_editor_expenditures_place"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:hint="@string/hint_editor_expenditures_place"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorTextEditorExpenditure"
                android:paddingBottom="16dp"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_editor_expenditures_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_editor_expenditures_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_expenditures_description"
            android:textColor="@color/colorTextEditorExpenditure"
            android:paddingBottom="8dp"/>

        <EditText
            android:id="@+id/et_editor_expenditures_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="top|left"
            android:hint="@string/hint_editor_expenditures_description"
            android:textColor="@color/colorTextEditorExpenditure"
            android:paddingBottom="8dp" />

    </LinearLayout>

</LinearLayout>
