<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_balance_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackgroundApp"
    tools:context="ch.mse.mybudget.BalanceOverviewActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_balance_overview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Balance Overview"
        android:textColor="@color/colorTextBalanceOverview"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="normal|bold"
        android:paddingBottom="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_balance_overview_spent_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SpentThisMonth"
            android:textColor="@color/colorTextBalanceOverview"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/tv_balance_overview_money_spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="100 CHF"
            android:textColor="@color/colorTextBalanceOverview"
            android:layout_gravity="right"
            android:paddingBottom="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_balance_overview_earned_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EarnedThisMonth"
            android:textColor="@color/colorTextBalanceOverview"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/tv_balance_overview_money_earned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="200 CHF"
            android:textColor="@color/colorTextBalanceOverview"
            android:layout_alignBaseline="@+id/tv_balance_overview_earned_this_month"
            android:layout_alignBottom="@+id/tv_balance_overview_earned_this_month"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingBottom="8dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_balance_overview_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ActualBalance"
            android:textColor="@color/colorTextBalanceOverview"
            android:paddingTop="8dp"/>

        <TextView
            android:id="@+id/tv_balance_overview_balance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="100 CHF"
            android:textColor="@color/colorTextBalanceOverview"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="8dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_show_earnings"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_earnings"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/signupbutton" />

        <Button
            android:id="@+id/btn_show_expenditures"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_expenditures"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/signupbutton"
            android:layout_toRightOf="@+id/btn_show_earnings"/>
    </RelativeLayout>

</LinearLayout>
